--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
